fixed broken layout on small screen

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -908,9 +908,10 @@
     }
 }
 .bottom-actrow {margin-top:15px;  padding: 6px 2px;}
+.issue-list-wrap { clear:both;}
 .search-wrap {
     form { margin: 0; }
-
+    float:left;
     .inner {
         position:relative;
         /*padding: 20px 20px 5px 20px;*/
